--- a/src/app/managing/create-account/create-account.component.html
+++ b/src/app/managing/create-account/create-account.component.html
@@ -198,7 +198,7 @@
           <h2>Truster setting</h2>
           <div class="form-group" style="width: 100%; display: inline-block; position: relative; top: -1px;" >
             <label style="margin-bottom: 0;">Assumer Session<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This is the account used to make AssumeRole on the Truster Account"></i></label>
-            <ng-select class="mt-2" formControlName="assumerSession" bindLabel="accountName" bindValue="session" dropdownPosition="top" [items]="assumerAwsSessions" [(ngModel)]="selectedSession" [disabled]="true"></ng-select>
+            <ng-select class="mt-2" formControlName="assumerSession" bindLabel="sessionName" bindValue="session" dropdownPosition="top" [items]="assumerAwsSessions" [(ngModel)]="selectedSession" [disabled]="true"></ng-select>
           </div>
         </ng-container>
       </ng-container>
