chore: added methods for calling sso provider sevice from components, testing...

--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -12,8 +12,8 @@
         <label>My cloud provider is:</label>
         <br>
         <div class="correct-top">
-        <button type="button" class="providers" (click)="setProvider(eAccountType.awsFederated);"><img src="../../../assets/images/aws-logo.svg" height="20"></button>
-        <button type="button" class="providers" (click)="setProvider(eAccountType.azure);"><img src="../../../assets/images/azure-logo.svg" height="20"></button>
+        <button type="button" class="providers" (click)="setProvider(eAccountType.awsFederated);"><img src="assets/images/aws-logo.svg" height="20"></button>
+        <button type="button" class="providers" (click)="setProvider(eAccountType.azure);"><img src="assets/images/azure-logo.svg" height="20"></button>
         </div>
       </div>
 
@@ -24,7 +24,7 @@
         <label>My integration is:</label>
         <br>
         <div class="correct-top">
-          <button type="button" class="providers" (click)="goToAwsSso()"><img src="../../../assets/images/aws-sso-logo.png" height="20"></button>
+          <button type="button" class="providers" (click)="goToAwsSso()"><img src="assets/images/aws-sso-logo.png" height="20"></button>
         </div>
       </div>
     </ng-container>
