--- a/src/app/components/shared/integrations-page/integrations-page.component.html
+++ b/src/app/components/shared/integrations-page/integrations-page.component.html
@@ -1,4 +1,4 @@
-<img src="../../../../assets/images/fake_blur.png" class="fake-blur" />
+<img src="assets/images/fake_blur.png" class="fake-blur" />
 <div class="background">
   <div class="container-fluid">
     <h1><a (click)="goBack()" class="back-link"><i class="fa fa-arrow-left"></i></a><i class="fa fa-link"></i> Integrations</h1>
