--- a/src/app/components/shared/profile-sidebar/profile-sidebar.component.html
+++ b/src/app/components/shared/profile-sidebar/profile-sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="profile {{profileOpen ? 'extended' : ''}}" (click)="closeProfile();">
 
-  <img src="../../../../assets/images/Leapp_Logo_white.png" alt="" title="" width="110" />
+  <img src="assets/images/Leapp_Logo_white.png" alt="" title="" width="110" />
 
   <ul>
     <li><a class="menu-item" (click)="goToHome();"><i class="fa fa-home"></i>&nbsp;<span>Home</span></a></li>
