--- a/src/app/components/start-screen/start-screen.component.html
+++ b/src/app/components/start-screen/start-screen.component.html
@@ -1,6 +1,6 @@
 <div class="content flex-container column page-container">
 
-    <img src="../../../assets/images/start-screen.png" class="background" />
+    <img src="assets/images/start-screen.png" class="background" />
 
     <h1>One step away<br>from your <strong>Cloud</strong></h1>
 
