--- a/src/app/components/aws-sso/aws-sso.component.html
+++ b/src/app/components/aws-sso/aws-sso.component.html
@@ -1,4 +1,4 @@
-<img src="../../../assets/images/fake_blur.png" class="fake-blur" />
+<img src="assets/images/fake_blur.png" class="fake-blur" />
 <div class="background">
   <ng-container *ngIf="!loading">
     <div class="container-fluid">
@@ -9,32 +9,32 @@
         <div class="form-group" style="width: 100%; display: inline-block;">
           <label><strong>Identity Provider</strong></label>
           <br>
-          <input  type="text" class="form-control blue-control btn-control" placeholder="aws Single Sign On" value="aws Single Sign On" readonly>
+          <input  type="text" class="form-control blue-control btn-control" placeholder="Aws Single Sign-On" value="Aws Single Sign-On" readonly>
         </div>
 
         <ng-container *ngIf="!isAwsSsoActive">
         <div class="form-group" style="width: 100%; display: inline-block;">
-          <label><strong>aws SSO Url</strong><span class="danger-text">*</span></label>
+          <label><strong>Aws Single Sign-On Url</strong><span class="danger-text">*</span></label>
           <br>
           <input formControlName="portalUrl" type="url" class="form-control" placeholder="aws SSO url *">
-          <small class="text-error" *ngIf="(form.controls['portalUrl'].dirty || form.controls['portalUrl'].touched) && form.controls['portalUrl'].errors">Insert the aws SSO url</small>
+          <small class="text-error" *ngIf="(form.controls['portalUrl'].dirty || form.controls['portalUrl'].touched) && form.controls['portalUrl'].errors">Insert the Aws Single Sign-On url</small>
         </div>
 
         <div class="form-group" style="width: 100%; display: inline-block;">
-          <label><strong>aws Region</strong></label>
+          <label><strong>Aws Region</strong></label>
           <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion" dropdownPosition="top"></ng-select>
         </div>
         </ng-container>
 
         <ng-container *ngIf="isAwsSsoActive">
           <div class="form-group" style="width: 100%; display: inline-block;">
-            <label><strong>aws SSO Url</strong></label>
+            <label><strong>Aws Single Sign-On Url</strong></label>
             <br>
             <span class="form-control blue-control">{{portalUrl}}</span>
          </div>
 
           <div class="form-group" style="width: 100%; display: inline-block;">
-            <label><strong>aws Region</strong></label>
+            <label><strong>Aws Region</strong></label>
             <br>
             <span class="form-control blue-control">{{selectedRegion}}</span>
           </div>
@@ -44,12 +44,12 @@
     </div>
 
     <ng-container *ngIf="!isAwsSsoActive">
-      <button class="button pull-center" (click)="login()">aws SSO</button>
+      <button class="button pull-center" (click)="login()">Login</button>
     </ng-container>
 
     <ng-container *ngIf="isAwsSsoActive">
-      <button class="button pull-left disabled" (click)="logout()">aws SSO LOGOUT</button>
-      <button class="button pull-right" (click)="forceSync()"> SYNC SESSIONS</button>
+      <button class="button pull-left disabled" (click)="logout()">Logout</button>
+      <button class="button pull-right" (click)="forceSync()">Syncronize</button>
     </ng-container>
 
   </ng-container>
