--- a/src/app/components/shared/profile-page/profile-page.component.html
+++ b/src/app/components/shared/profile-page/profile-page.component.html
@@ -68,7 +68,7 @@
 
         <div class="form-group" style="width: 88%; display: inline-block;">
           <label>SAML 2.0 IdP URL<span class="danger-text">*</span></label>
-          <input formControlName="idpUrlId" type="text" class="form-control" placeholder="Idp Url" [value]="idpUrlValue ? idpUrlValue.url : ''" >
+          <input formControlName="idpUrl" type="text" class="form-control" placeholder="Idp Url" [value]="idpUrlValue ? idpUrlValue.url : ''" >
         </div>
 
         <div class="form-group" style="width: 2%; display: inline-block;"></div>
