--- a/src/app/components/session/session-card/session-card.component.html
+++ b/src/app/components/session/session-card/session-card.component.html
@@ -56,7 +56,7 @@
           <li *ngFor="let instance of instances" class="ssm-card">
             <div>
               <span><b>{{instance.Name.length >= 24 ? instance.Name.substr(0, 21) + '...' : instance.Name}}</b> - {{instance.IPAddress}}</span>
-              <button class="btn" (click)="startSsmSession(instance.InstanceId)">
+              <button class="btn" (click)="startSsmSession(session.sessionId, instance.InstanceId)">
                 <i class="fa fa-spinner fa-spin" *ngIf="instance.loading"></i>
                 <span *ngIf="!instance.loading">Connect</span>
               </button>
