--- a/src/app/components/session/session/session.component.html
+++ b/src/app/components/session/session/session.component.html
@@ -28,7 +28,7 @@
 <div class="container-fluid with-scroll">
 
   <ul class="account-cards">
-    <li style="position:relative;"> <span class="fixed-profiles">aws Profiles</span><span class="fixed-status">Status</span></li>
+    <li style="position:relative;"> <span class="fixed-profiles">AWS Profiles</span><span class="fixed-status">Status</span></li>
     <li *ngIf="(workspaceService.sessions$ | async | filtering:true).length !== 0">
       <h3 class="mb-session">Active Accounts</h3>
     </li>
