refactor: renamed idpUrl to idpUrls

--- a/src/app/components/shared/profile-page/profile-page.component.html
+++ b/src/app/components/shared/profile-page/profile-page.component.html
@@ -83,7 +83,7 @@
             <th><label>Url</label></th><th class="text-right"><label>Actions</label></th>
             </thead>
             <tbody>
-            <ng-container *ngFor="let idpUrl of workspace.idpUrl">
+            <ng-container *ngFor="let idpUrl of workspace.idpUrls">
               <tr>
                 <td>{{idpUrl.url}}</td>
                 <td>
