shifted integration paghe directly to single sign on page for now | removed * sign in aws profile for plain session form

--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -98,7 +98,7 @@
         <ng-container *ngIf="sessionType !== eAccountType.azure">
           <div class="form-group" style="width: 2%; display: inline-block;"></div>
           <div class="form-group" style="width: 49%; display: inline-block;">
-            <label>aws Profile<span class="danger-text">*</span></label>
+            <label>aws Profile</label>
             <ng-select [items]="profiles"
                        [addTag]="addNewProfile"
                        formControlName="awsProfile"
