--- a/src/app/components/shared/profile-sidebar/profile-sidebar.component.html
+++ b/src/app/components/shared/profile-sidebar/profile-sidebar.component.html
@@ -5,7 +5,7 @@
   <ul>
     <li><a class="menu-item" (click)="goToHome();"><i class="fa fa-home"></i>&nbsp;<span>Home</span></a></li>
     <li><a class="menu-item" (click)="goToProfile();"><i class="fa fa-gear"></i>&nbsp;<span>Options</span></a></li>
-    <li><a class="menu-item" (click)="goToIntegrations();">
+    <li><a class="menu-item" (click)="goToIdentityProvider();">
       <i class="fa fa-link"></i>&nbsp;<span>Integrations</span></a>
       <ul>
         <li><a class="menu-item" (click)="goToIdentityProvider();"><small>Identity Provider</small></a></li>
