--- a/src/app/components/edit-account/edit-account.component.html
+++ b/src/app/components/edit-account/edit-account.component.html
@@ -23,27 +23,13 @@
         <div class="form-group" style="width: 100%; display: inline-block;">
           <label>Account Alias<span class="danger-text">*</span></label>
           <br>
-          <input formControlName="name" type="text" class="form-control" placeholder="Account Alias *" readonly>
+          <input formControlName="name" type="text" class="form-control" placeholder="Account Alias *">
           <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert an Account Alias</small>
         </div>
 
         <div class="form-group" style="width: 49%; display: inline-block;">
-          <label>Account Number<span class="danger-text">*</span></label>
-          <input formControlName="accountNumber" type="text" class="form-control" placeholder="Account Number *" readonly>
-          <small class="text-error" *ngIf="(form.controls['accountNumber'].dirty || form.controls['accountNumber'].touched) && form.controls['accountNumber'].errors">Insert the Account Number</small>
-        </div>
-
-        <div class="form-group" style="width: 2%; display: inline-block;"></div>
-
-        <div class="form-group" style="width: 49%; display: inline-block;">
-          <label>aws Region</label>
+          <label>Aws Region</label>
           <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion" dropdownPosition="top"></ng-select>
-        </div>
-
-        <div class="form-group" style="width: 49%; display: inline-block;">
-          <label>User<span class="danger-text">*</span></label>
-          <input formControlName="plainUser" type="text" class="form-control" placeholder="User name" readonly>
-          <small class="text-error" *ngIf="(form.controls['plainUser'].dirty || form.controls['plainUser'].touched) && form.controls['plainUser'].errors">Insert the User</small>
         </div>
 
         <div class="form-group" style="width: 2%; display: inline-block; position: relative; top: -1px;"></div>
