--- a/src/app/components/session/session-card/session-card.component.html
+++ b/src/app/components/session/session-card/session-card.component.html
@@ -23,11 +23,11 @@
 
       <a *ngIf="session.type !== eSessionType.azure" (click)="changeProfileModalOpen();">Change Profile</a>
 
-      <a *ngIf="session.type === eSessionType.awsPlain && session.status !== eSessionStatus.active" (click)="editSession(session, $event);">Edit account</a>
+      <a *ngIf="session.type === eSessionType.awsIamUser && session.status !== eSessionStatus.active" (click)="editSession(session, $event);">Edit account</a>
       <a (click)="deleteSession(session, $event);">Remove account</a>
-      <ng-container *ngIf="(session.type === eSessionType.awsFederated || session.type === eSessionType.awsPlain || session.type === eSessionType.awsSso)">
+      <ng-container *ngIf="(session.type === eSessionType.awsIamRoleFederated || session.type === eSessionType.awsIamUser || session.type === eSessionType.awsSsoRole)">
       <a (click)="copyCredentials(session, 1, $event);">Copy Account Number</a>
-        <ng-container *ngIf="(session.type !== eSessionType.awsPlain)">
+        <ng-container *ngIf="(session.type !== eSessionType.awsIamUser)">
         <a (click)="copyCredentials(session, 2, $event);">Copy Role ARN</a>
       </ng-container>
       </ng-container>
