--- a/src/app/components/shared/profile-sidebar/profile-sidebar.component.html
+++ b/src/app/components/shared/profile-sidebar/profile-sidebar.component.html
@@ -18,6 +18,6 @@
   <br>
   <br>
   <div class="copy">
-    <span>Leapp | powered by beSharp</span>
+    <span>Leapp | © 2020 Noovolari</span>
   </div>
 </div>
