--- a/src/app/components/create-account/create-account.component.html
+++ b/src/app/components/create-account/create-account.component.html
@@ -6,19 +6,19 @@
     <!-- ================================================================== -->
     <ng-container *ngIf="!providerSelected">
       <h1>Choose your Provider</h1>
-      <p>To define your Access Strategy, select the Cloud Provider you need to connect to</p>
+      <p>To define your Access Method, Select the needed Cloud Provider</p>
 
       <div class="form-group" style="width: 100%; display: inline-block;">
-        <label>My cloud provider is:</label>
+        <label>My Cloud Provider is:</label>
         <br>
         <div class="correct-top">
-        <button type="button" class="providers" (click)="setProvider(eAccountType.awsIamRoleFederated);"><img src="assets/images/aws-logo.svg" height="20"></button>
-        <button type="button" class="providers" (click)="setProvider(eAccountType.azure);"><img src="assets/images/azure-logo.svg" height="20"></button>
+        <button type="button" class="providers" (click)="setProvider(eSessionType.awsIamRoleFederated);"><img src="assets/images/aws-logo.svg" height="20"></button>
+        <button type="button" class="providers" (click)="setProvider(eSessionType.azure);"><img src="assets/images/azure-logo.svg" height="20"></button>
         </div>
       </div>
 
-      <h1>Choose your Integration</h1>
-      <p>To define your Access Strategy, select your Leapp integration.</p>
+      <h1>Or choose your Integration</h1>
+      <p>To define your Access Method, select your Leapp Integration.</p>
 
       <div class="form-group" style="width: 100%; display: inline-block;">
         <label>My integration is:</label>
@@ -29,25 +29,25 @@
       </div>
     </ng-container>
 
-    <ng-container *ngIf="provider !== eAccountType.azure && providerSelected && typeSelection">
-      <h1>Choose your Access Strategy</h1>
-      <p class="smaller">I’m not sure of what’s my Access Strategy? Know more <a class="link-wiki" (click)="openAccessStrategyDocumentation();">here</a></p>
+    <ng-container *ngIf="provider !== eSessionType.azure && providerSelected && typeSelection">
+      <h1>Choose your Access Method</h1>
+      <p class="smaller">I’m not sure of what’s my Access Method? Know more <a class="link-wiki" (click)="openAccessStrategyDocumentation();">here</a></p>
       <div class="form-group" style="width: 100%; display: inline-block;">
-        <label>My Access Strategy is:</label>
+        <label>My Access Method is:</label>
         <br>
         <ng-container *ngIf="sessionType === undefined">
             <div class="correct-top">
-              <button type="button" class="providers {{sessionType === eAccountType.awsIamRoleFederated ? 'selected' : ''}}" (click)="hasSsoUrl = true; setAccessStrategy(eAccountType.awsIamRoleFederated);">
-                Federated
+              <button type="button" class="providers {{sessionType === eSessionType.awsIamRoleFederated ? 'selected' : ''}}" (click)="hasSsoUrl = true; setAccessStrategy(eSessionType.awsIamRoleFederated);">
+                IAM Role Federated
               </button>
-              <button type="button" class="providers {{sessionType === eAccountType.awsIamUser ? 'selected' : ''}}" (click)="setAccessStrategy(eAccountType.awsIamUser);">
-                Plain
+              <button type="button" class="providers {{sessionType === eSessionType.awsIamUser ? 'selected' : ''}}" (click)="setAccessStrategy(eSessionType.awsIamUser);">
+                IAM User
               </button>
-              <button type="button" class="providers {{sessionType === eAccountType.awsIamRoleChained ? 'selected' : ''}}" (click)="setAccessStrategy(eAccountType.awsIamRoleChained);" *ngIf="!firstTime">
-                Truster
+              <button type="button" class="providers {{sessionType === eSessionType.awsIamRoleChained ? 'selected' : ''}}" (click)="setAccessStrategy(eSessionType.awsIamRoleChained);" *ngIf="!firstTime">
+                IAM Role Chained
               </button>
               <span class="providers disabled second-step-fix" *ngIf="firstTime">
-                Truster
+                IAM Role Chained
               </span>
             </div>
         </ng-container>
@@ -57,22 +57,22 @@
     <!-- ================================================================== -->
     <!-- ================================================================== -->
 
-    <ng-container *ngIf="((provider !== eAccountType.awsIamRoleFederated) || (hasSsoUrl && (provider === eAccountType.awsIamRoleFederated))) && !typeSelection && providerSelected">
+    <ng-container *ngIf="((provider !== eSessionType.awsIamRoleFederated) || (hasSsoUrl && (provider === eSessionType.awsIamRoleFederated))) && !typeSelection && providerSelected">
 
-      <h1>Choose your Access Strategy</h1>
-      <p class="smaller">I’m not sure of what’s my Access Strategy? Know more <a class="link-wiki" (click)="openAccessStrategyDocumentation();">here</a></p>
+      <h1>Choose your Access Method</h1>
+      <p class="smaller">I’m not sure of what’s my Access Method? Know more <a class="link-wiki" (click)="openAccessStrategyDocumentation();">here</a></p>
       <div style="width: 100%; display: inline-block;">
         <!-- ================================================================== -->
         <!-- ==                    LOGO FOR AWS ACCOUNTS ARE                 == -->
         <!-- ================================================================== -->
-        <ng-container *ngIf="sessionType !== eAccountType.azure">
+        <ng-container *ngIf="sessionType !== eSessionType.azure">
           <div class="form-group" style="width: 49%; display: inline-block;">
-            <label>My Access Strategy is:</label>
+            <label>My Access Method is:</label>
             <br>
             <span class="providers">
-              <ng-container *ngIf="sessionType === eAccountType.awsIamRoleFederated">Federated</ng-container>
-              <ng-container *ngIf="sessionType === eAccountType.awsIamRoleChained">Truster</ng-container>
-              <ng-container *ngIf="sessionType === eAccountType.awsIamUser">Plain</ng-container>
+              <ng-container *ngIf="sessionType === eSessionType.awsIamRoleFederated">IAM Role Federated</ng-container>
+              <ng-container *ngIf="sessionType === eSessionType.awsIamRoleChained">IAM Role Chained</ng-container>
+              <ng-container *ngIf="sessionType === eSessionType.awsIamUser">IAM User</ng-container>
             </span>
             <br><br>
           </div>
@@ -81,12 +81,12 @@
         <!-- ================================================================== -->
         <!-- ==                  LOGO FOR AZURE ACCOUNTS ARE                 == -->
         <!-- ================================================================== -->
-        <ng-container *ngIf="sessionType === eAccountType.azure">
+        <ng-container *ngIf="sessionType === eSessionType.azure">
           <div class="form-group" style="width: 100%; display: inline-block">
-            <label>My Access Strategy is:</label>
+            <label>My Access Method is:</label>
             <br>
             <span class="providers">
-              <ng-container *ngIf="sessionType === eAccountType.azure">Azure</ng-container>
+              <ng-container *ngIf="sessionType === eSessionType.azure">Azure</ng-container>
             </span>
             <br><br>
           </div>
@@ -95,17 +95,17 @@
         <!-- ================================================================== -->
         <!-- ==                      PROFILE ID SELECTION                    == -->
         <!-- ================================================================== -->
-        <ng-container *ngIf="sessionType !== eAccountType.azure">
+        <ng-container *ngIf="sessionType !== eSessionType.azure">
           <div class="form-group" style="width: 2%; display: inline-block;"></div>
           <div class="form-group" style="width: 49%; display: inline-block;">
-            <label>aws Profile</label>
+            <label>Named Profile</label>
             <ng-select [items]="profiles"
                        [addTag]="addNewProfile"
                        formControlName="awsProfile"
                        placeholder="add a profile *"
                        [(ngModel)]="selectedProfile">
             </ng-select>
-            <small class="text-error" *ngIf="(form.controls['awsProfile'].dirty || form.controls['awsProfile'].touched) && form.get('awsProfile').value === undefined">Insert the aws Profile</small>
+            <small class="text-error" *ngIf="(form.controls['awsProfile'].dirty || form.controls['awsProfile'].touched) && form.get('awsProfile').value === undefined">Insert the Named Profile</small>
           </div>
         </ng-container>
       </div>
@@ -113,100 +113,100 @@
       <!-- ================================================================== -->
       <!-- ==              ACCOUNT ALIAS FOR ALL ACCOUNTS TYPE             == -->
       <!-- ================================================================== -->
-      <div class="form-group d-inline-block" [ngStyle]="{width: sessionType === eAccountType.awsIamRoleFederated ? '49%' : '100%'}">
-        <label>Account Alias<span class="danger-text">*</span></label>
+      <div class="form-group d-inline-block" [ngStyle]="{width: sessionType === eSessionType.awsIamRoleFederated ? '49%' : '100%'}">
+        <label>Session Alias<span class="danger-text">*</span></label>
         <br>
-        <input formControlName="name" type="text" class="form-control" placeholder="Account Alias *">
-        <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert an Account Alias</small>
+        <input formControlName="name" type="text" class="form-control" placeholder="Session Alias *">
+        <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert a Session Alias</small>
       </div>
-      <div class="form-group" style="width: 2%; display: inline-block;" *ngIf="sessionType === eAccountType.awsIamRoleFederated"></div>
+      <div class="form-group" style="width: 2%; display: inline-block;" *ngIf="sessionType === eSessionType.awsIamRoleFederated"></div>
 
       <!-- ====================== -->
-      <!-- AWS ACCOUNT PROPERTIES -->
+      <!-- AWS SESSION PROPERTIES -->
       <!-- ====================== -->
-      <ng-container *ngIf="sessionType !== eAccountType.azure">
+      <ng-container *ngIf="sessionType !== eSessionType.azure">
         <!-- ================================================================== -->
         <!-- ==                        AWS REGION ALL                        == -->
         <!-- ================================================================== -->
-        <div class="form-group" [ngStyle]="{display: 'inline-block', width: sessionType === eAccountType.awsIamRoleFederated ? '49%': '100%'}">
-          <label>aws Region</label>
+        <div class="form-group" [ngStyle]="{display: 'inline-block', width: sessionType === eSessionType.awsIamRoleFederated ? '49%': '100%'}">
+          <label>Region</label>
           <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedRegion" dropdownPosition="top"></ng-select>
         </div>
 
         <!-- ================================================================== -->
-        <!-- ==                 ROLE ARN FEDERATED & TRUSTER                 == -->
+        <!-- ==         ARN IAM ROLE FEDERATED & IAM ROLE CHAINED            == -->
         <!-- ================================================================== -->
-        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="sessionType === eAccountType.awsIamRoleFederated || sessionType === eAccountType.awsIamRoleChained">
-          <label>RoleArn<span class="danger-text">*</span></label>
+        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="sessionType === eSessionType.awsIamRoleFederated || sessionType === eSessionType.awsIamRoleChained">
+          <label>Role ARN<span class="danger-text">*</span></label>
           <input formControlName="roleArn" type="text" class="form-control" placeholder="Role ARN" />
           <small class="text-error" *ngIf="(form.controls['roleArn'].dirty || form.controls['roleArn'].touched) && form.controls['roleArn'].errors">Insert the Role ARN</small>
         </div>
 
         <!-- ================================================================== -->
-        <!-- ==                 SAML & IDP ARN FOR FEDERATED                 == -->
+        <!-- ==             SAML & IDP ARN FOR IAM ROLE FEDERATED            == -->
         <!-- ================================================================== -->
-        <ng-container *ngIf="sessionType === eAccountType.awsIamRoleFederated">
-          <h2>Federated setting</h2>
+        <ng-container *ngIf="sessionType === eSessionType.awsIamRoleFederated">
+          <h2>IAM Role Federated setting</h2>
           <div class="form-group" style="width: 100%; display: inline-block;">
             <label>SAML 2.0 Url<span class="danger-text">*</span></label>
-            <ng-select [items]="idps"
+            <ng-select [items]="idpUrls"
                        [addTag]="addNewSSO"
                        formControlName="federationUrl"
-                       placeholder="single sign-on url *"
+                       placeholder="Single Sign-On url *"
                        [(ngModel)]="selectedIdpUrl">
             </ng-select>
             <small class="text-error" *ngIf="(form.controls['federationUrl'].dirty || form.controls['federationUrl'].touched) && form.get('federationUrl').value === undefined">Insert the SAML 2.0 Url</small>
           </div>
 
           <div class="form-group" style="width: 100%; display: inline-block;">
-            <label>IdP ARN<span class="danger-text">*</span></label>
-            <input formControlName="idpArn" type="text" class="form-control" placeholder="Idp Arn *">
-            <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the IdP ARN</small>
+            <label>AWS Identity Provider ARN<span class="danger-text">*</span></label>
+            <input formControlName="idpArn" type="text" class="form-control" placeholder="Identity Provider ARN *">
+            <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the AWS Identity Provider ARN</small>
           </div>
         </ng-container>
 
         <!-- ================================================================== -->
         <!-- ==                         MFA DEVICE ARN                       == -->
         <!-- ================================================================== -->
-        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="sessionType === eAccountType.awsIamUser">
-          <label>Mfa Device</label>
-          <input formControlName="mfaDevice" type="text" class="form-control" placeholder="MFA arn or SN (optional)" />
+        <div class="form-group" style="width: 100%; display: inline-block;" *ngIf="sessionType === eSessionType.awsIamUser">
+          <label>Mfa Device ARN</label>
+          <input formControlName="mfaDevice" type="text" class="form-control" placeholder="MFA ARN or SN (optional)" />
         </div>
 
         <!-- ================================================================== -->
         <!-- ==                      SECRET & ACCESS KEYS                    == -->
         <!-- ================================================================== -->
-        <ng-container *ngIf="sessionType === eAccountType.awsIamUser">
-          <h2>Add secret</h2>
+        <ng-container *ngIf="sessionType === eSessionType.awsIamUser">
+          <h2>Add credentials</h2>
           <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
-            <label style="margin-bottom: 0;">Access  Key<span class="danger-text">*</span></label>
-            <input formControlName="accessKey" type="text" class="form-control" placeholder="Access Key *">
+            <label style="margin-bottom: 0;">Access Key ID<span class="danger-text">*</span></label>
+            <input formControlName="accessKey" type="text" class="form-control" placeholder="Access Key ID *">
           </div>
 
           <div style="width: 2%; height: 1px; display: inline-block;"></div>
 
           <div class="form-group" style="width: 49%; display: inline-block; position: relative; top: -1px;" >
-            <label style="margin-bottom: 0;">Secret Key<span class="danger-text">*</span></label>
-            <input formControlName="secretKey" type="text" class="form-control" placeholder="Secret Key *">
+            <label style="margin-bottom: 0;">Secret Access Key<span class="danger-text">*</span></label>
+            <input formControlName="secretKey" type="text" class="form-control" placeholder="Secret Access Key *">
           </div>
         </ng-container>
 
         <!-- ================================================================== -->
         <!-- ==                       ASSUMER SESSIONS                       == -->
         <!-- ================================================================== -->
-        <ng-container *ngIf="sessionType === eAccountType.awsIamRoleChained">
-          <h2>Truster setting</h2>
+        <ng-container *ngIf="sessionType === eSessionType.awsIamRoleChained">
+          <h2>IAM Role Chained setting</h2>
           <div class="form-group" style="width: 100%; display: inline-block; position: relative; top: -1px;" >
-            <label style="margin-bottom: 0;">Assumer Session<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="This is the account used to make AssumeRole on the Truster Account"></i></label>
+            <label style="margin-bottom: 0;">Assumer Session<span class="danger-text">*</span> <i class="fa fa-question-circle" tooltip="Source Session to assume the current Session"></i></label>
             <ng-select class="mt-2" formControlName="assumerSession" bindLabel="sessionName" bindValue="session" dropdownPosition="top" [items]="assumerAwsSessions" [(ngModel)]="selectedSession" [disabled]="true"></ng-select>
           </div>
         </ng-container>
       </ng-container>
 
       <!-- ================================================================= -->
-      <!-- ==                  AZURE ACCOUNT PROPERTIES                   == -->
+      <!-- ==                  AZURE SESSION PROPERTIES                   == -->
       <!-- ================================================================= -->
-      <ng-container *ngIf="sessionType === eAccountType.azure">
+      <ng-container *ngIf="sessionType === eSessionType.azure">
         <div class="form-group" style="width: 100%; display: inline-block;">
           <label>Subscription Id<span class="danger-text">*</span></label>
           <input formControlName="subscriptionId" type="text" class="form-control" placeholder="Subscription Id *">
@@ -220,7 +220,7 @@
         </div>
 
         <div class="form-group" style="width: 100%; display: inline-block;">
-          <label>Azure Location</label>
+          <label>Location</label>
           <ng-select formControlName="azureLocation" bindLabel="location" bindValue="location" [items]="locations" [(ngModel)]="selectedLocation" dropdownPosition="top"></ng-select>
         </div>
       </ng-container>
