--- a/src/app/components/edit-account/edit-account.component.html
+++ b/src/app/components/edit-account/edit-account.component.html
@@ -10,21 +10,21 @@
         <div class="correct-top" style="width: 100%;">
           <a class="back" (click)="goBack();"><i class="fa fa-chevron-left"></i></a>
           <span class="providers extended">
-            <ng-container><i class="fa fa-info" tooltip="This is a set of option to create plain accounts"></i> Plain</ng-container>
+            <ng-container><i class="fa fa-info" tooltip="This is a set of option to create iam user sessions"></i> IAM User</ng-container>
           </span>
           <br><br>
         </div>
       </div>
 
       <ng-container>
-        <!-- ============================ -->
-        <!-- aws PLAIN ACCOUNT PROPERTIES -->
-        <!-- ============================ -->
+        <!-- =============================== -->
+        <!-- AWS IAM USER ACCOUNT PROPERTIES -->
+        <!-- =============================== -->
         <div class="form-group" style="width: 100%; display: inline-block;">
-          <label>Account Alias<span class="danger-text">*</span></label>
+          <label>Session Alias<span class="danger-text">*</span></label>
           <br>
           <input formControlName="name" type="text" class="form-control" placeholder="Account Alias *">
-          <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert an Account Alias</small>
+          <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert a Session Alias</small>
         </div>
 
         <div class="form-group" style="width: 49%; display: inline-block;">
