--- a/src/app/components/session/session-card/session-card.component.html
+++ b/src/app/components/session/session-card/session-card.component.html
@@ -18,19 +18,20 @@
       <i class="fa fa-ellipsis-v"></i>
     </a>
     <div id="drop-list" *dropdownMenu class="dropdown-menu drop-list dropdown-menu-right" role="menu" aria-labelledby="button-basic">
-      <a (click)="ssmModalOpen(session);" *ngIf="session.type !== eSessionType.azure">SSM session</a>
-      <a (click)="changeRegionModalOpen(session);">Change {{session.type === eSessionType.azure ? 'location' : 'region'}}</a>
+      <a (click)="ssmModalOpen(session);" *ngIf="session.type !== eSessionType.azure">SSM Session</a>
+      <a (click)="changeRegionModalOpen(session);">Edit {{session.type === eSessionType.azure ? 'Location' : 'Region'}}</a>
 
-      <a *ngIf="session.type !== eSessionType.azure" (click)="changeProfileModalOpen();">Change Profile</a>
+      <a *ngIf="session.type !== eSessionType.azure" (click)="changeProfileModalOpen();">Edit Profile</a>
 
       <a *ngIf="session.type === eSessionType.awsIamUser && session.status !== eSessionStatus.active" (click)="editSession(session, $event);">Edit account</a>
-      <a (click)="deleteSession(session, $event);">Remove account</a>
       <ng-container *ngIf="(session.type === eSessionType.awsIamRoleFederated || session.type === eSessionType.awsIamUser || session.type === eSessionType.awsSsoRole)">
-      <a (click)="copyCredentials(session, 1, $event);">Copy Account Number</a>
+        <a (click)="copyCredentials(session, 1, $event);">Copy Account Number</a>
         <ng-container *ngIf="(session.type !== eSessionType.awsIamUser)">
-        <a (click)="copyCredentials(session, 2, $event);">Copy Role ARN</a>
+          <a (click)="copyCredentials(session, 2, $event);">Copy Role ARN</a>
+        </ng-container>
       </ng-container>
-      </ng-container>
+      <a (click)="deleteSession(session, $event);">Delete Session</a>
+
     </div>
   </ng-container>
 
@@ -39,18 +40,18 @@
 <ng-template #ssmModalTemplate>
   <div class="modal-header">
     <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
-    <b>{{session.sessionName}}</b> - {{ session | detail }} | <b>SSM</b>
+    <b>{{session.sessionName}}</b> - {{ session | detail }} | <b>SSM Session</b>
   </div>
   <div class="modal-body">
 
     <div class="ssm-tray">
 
-      <b class="">Select a region:</b>
+      <b class="">Select a Region:</b>
       <ng-select bindLabel="region" bindValue="region" [items]="awsRegions" [(ngModel)]="selectedSsmRegion" placeholder="Select a Region for finding instances" (change)="changeSsmRegion($event, session);"></ng-select>
 
       <div class="loader" *ngIf="ssmLoading"><i class="fa fa-spinner fa-spin"></i></div>
       <div class="list-of-ssm" *ngIf="!ssmLoading && instances.length > 0">
-        <b>Select an Instance:</b><br>
+        <b>Select an EC2 Instance:</b><br>
         <input class="form-control" type="text" placeholder="search by..." (keyup)="searchSSMInstance($event)" />
         <ul class="ssm-ul">
           <li *ngFor="let instance of instances" class="ssm-card">
@@ -72,7 +73,7 @@
 <ng-template #defaultRegionModalTemplate>
   <div class="modal-header">
     <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
-    <b>{{session.sessionName}}</b> - {{session | detail }} | <b>Change {{session.type === eSessionType.azure ? 'Location' : 'Region'}}</b>
+    <b>{{session.sessionName}}</b> - {{session | detail }} | <b>Edit {{session.type === eSessionType.azure ? 'Location' : 'Region'}}</b>
   </div>
   <div class="modal-body">
 
@@ -90,7 +91,7 @@
 <ng-template #defaultProfileModalTemplate>
   <div class="modal-header">
     <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
-    <b>{{session.sessionName}}</b> - {{ session | detail }} | <b>Change Profile</b>
+    <b>{{session.sessionName}}</b> - {{ session | detail }} | <b>Edit Profile</b>
   </div>
   <div class="modal-body">
 
