--- a/src/app/components/session/session-card/session-card.component.html
+++ b/src/app/components/session/session-card/session-card.component.html
@@ -50,10 +50,13 @@
       <ng-select bindLabel="region" bindValue="region" [items]="awsRegions" [(ngModel)]="selectedSsmRegion" placeholder="Select a Region for finding instances" (change)="changeSsmRegion($event, session);"></ng-select>
 
       <div class="loader" *ngIf="ssmLoading"><i class="fa fa-spinner fa-spin"></i></div>
-      <div class="list-of-ssm" *ngIf="!ssmLoading && instances.length > 0">
-        <b>Select an EC2 Instance:</b><br>
-        <input class="form-control" type="text" placeholder="search by..." (keyup)="searchSSMInstance($event)" />
-        <ul class="ssm-ul">
+      <div class="list-of-ssm" *ngIf="!ssmLoading">
+        <ng-container *ngIf="!ssmLoading && !firstTimeSsm">
+          <b>Select an EC2 Instance:</b><br>
+          <input class="form-control" type="text" placeholder="search by..." (keyup)="searchSSMInstance($event)" />
+        </ng-container>
+
+        <ul class="ssm-ul" *ngIf="instances.length > 0">
           <li *ngFor="let instance of instances" class="ssm-card">
             <div>
               <span><b>{{instance.Name.length >= 24 ? instance.Name.substr(0, 21) + '...' : instance.Name}}</b> - {{instance.IPAddress}}</span>
