fix: closing MFA dialog without inserting code put session inactive and show a warning to user
fix: having MFA active and application in blur now allow for notification and popping the app up again to ask for user interaction

--- a/src/app/components/session/session-card/session-card.component.html
+++ b/src/app/components/session/session-card/session-card.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="information-profile" (click)="switchCredentials()">
     <ng-container *ngIf="session.type !== eSessionType.azure">
-      <i class="fa fa-{{session | icon: getProfileName(getProfileId(session))}}"></i>&nbsp;&nbsp;{{getProfileName(getProfileId(session))}}
+      <i class="fa fa-{{getIcon(session)}}"></i>&nbsp;&nbsp;{{getProfileName(getProfileId(session))}}
     </ng-container>
   </div>
   <div class="information-offset" (click)="switchCredentials()">
